# parallel_equitruss

./: .gitmodules  CMakeLists.txt  ConnComp.cpp  ConnComp.h  EGraph.cpp  EGraph.h  EquiTruss.cpp  GraphManip.cpp  GraphManip.h  MergeSort.h  README.md  Shiloach_Vishkin.docx  global.h
src/: afforest.h  bc.cc  benchmark.h  bfs.cc  bitmap.h  builder.h  cc.cc  cc_sv.cc  cc_sv.h  command_line.h  converter.cc  generator.h  graph.h  platform_atomics.h  pr.cc  pr_spmv.cc  pvector.h  reader.h  sliding_queue.h  sssp.cc  tc.cc  tc.h  timer.h  util.h  writer.h
util/: to_zero_index.cpp
